@@ -1,0 +1,11 @@
+find_program(CLANG_TIDY clang-tidy)
+if (NOT CLANG_TIDY)
+    find_program(CLANG_TIDY clang-tidy-9)
+endif()
+if (NOT CLANG_TIDY)
+    find_program(CLANG_TIDY clang-tidy-8)
+endif()
+message(STATUS "CLANG_TIDY=${CLANG_TIDY}")
+if (CLANG_TIDY)
+    add_custom_target(run-clang-tidy ${CLANG_TIDY} -p=${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/*.c)
+endif()
